# chatatui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  mcp.rs
src/app/: mod.rs
src/client/: mod.rs
src/config/: mod.rs
src/ui/: mod.rs
