[package]
name = "chatatui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3.32"
serde_json = "1.0"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.0"
directories = "6.0.0"
reqwest = { version = "0.13.0", features = ["json"] }
tempfile = "3.10"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
arboard = "3.4"
